Creating the file 'players.csv'

--- a/Volleyball Nations League (VNL) - 2023 Women Statistics.ipynb
+++ b/Volleyball Nations League (VNL) - 2023 Women Statistics.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1edacb78",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,14 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e984daf6",
+   "metadata": {},
+   "source": [
+    "## 1. Statistics"
    ]
   },
   {
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "c7821e8e",
    "metadata": {},
    "outputs": [],
@@ -337,6 +345,337 @@
     "best_setters.to_csv('best_setters.csv', index=False)\n",
     "best_diggers.to_csv('best_diggers.csv', index=False)\n",
     "best_receivers.to_csv('best_receivers.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8972d0d",
+   "metadata": {},
+   "source": [
+    "The dataframes have been exported successfully."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5fe1e42",
+   "metadata": {},
+   "source": [
+    "## 2. Players"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "145a560f",
+   "metadata": {},
+   "source": [
+    "The player lists are spread across different links, with 16 teams competing in the tournament, resulting in 16 links for data extraction. To optimize the process, I'll employ a similar approach, utilizing dictionaries and for loops to minimize code repetition and enhance efficiency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fbd20996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Links of players for each team\n",
+    "\n",
+    "players = {'Brazil': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5834/players/',\n",
+    "           'Bulgaria': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5835/players/',\n",
+    "           'Canada': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5836/players/',\n",
+    "           'China': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5837/players/',\n",
+    "           'Croatia': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5838/players/',\n",
+    "           'Dominican Republic': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5839/players/',\n",
+    "           'Germany': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5840/players/',\n",
+    "           'Italy': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5841/players/',\n",
+    "           'Japan': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5842/players/',\n",
+    "           'Korea': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5843/players/',\n",
+    "           'Netherlands': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5844/players/',\n",
+    "           'Poland': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5845/players/',\n",
+    "           'Serbia': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5846/players/',\n",
+    "           'Thailand': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5847/players/',\n",
+    "           'Türkiye': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5848/players/',\n",
+    "           'USA': 'https://en.volleyballworld.com/volleyball/competitions/volleyball-nations-league/2023/teams/women/5849/players/',\n",
+    "          }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4896b50a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Requests\n",
+    "\n",
+    "players_requests = {}\n",
+    "\n",
+    "for key in players.keys():\n",
+    "    players_requests[key] = requests.get(players[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5520ef13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Brazil': <Response [200]>,\n",
+       " 'Bulgaria': <Response [200]>,\n",
+       " 'Canada': <Response [200]>,\n",
+       " 'China': <Response [200]>,\n",
+       " 'Croatia': <Response [200]>,\n",
+       " 'Dominican Republic': <Response [200]>,\n",
+       " 'Germany': <Response [200]>,\n",
+       " 'Italy': <Response [200]>,\n",
+       " 'Japan': <Response [200]>,\n",
+       " 'Korea': <Response [200]>,\n",
+       " 'Netherlands': <Response [200]>,\n",
+       " 'Poland': <Response [200]>,\n",
+       " 'Serbia': <Response [200]>,\n",
+       " 'Thailand': <Response [200]>,\n",
+       " 'Türkiye': <Response [200]>,\n",
+       " 'USA': <Response [200]>}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking if the request was successful (status code 200).\n",
+    "\n",
+    "players_requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "61f5d91e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BeautifulSoup and HTML texts\n",
+    "\n",
+    "soup_players = {}\n",
+    "\n",
+    "for key in players_requests.keys():\n",
+    "    soup_players[key] = BeautifulSoup(players_requests[key].text, 'lxml')\n",
+    "    \n",
+    "table_players = {}\n",
+    "\n",
+    "for key in soup_players.keys():\n",
+    "    table_players[key] = soup_players[key].find('table')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "be6493eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a dataframe for each team\n",
+    "\n",
+    "dataframes_players = {}\n",
+    "\n",
+    "for key in table.keys():\n",
+    "    dataframes_players[key] = create_table(table[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3e6198b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Indicating the abbreviation for each team in a column.\n",
+    "\n",
+    "dataframes_players['Brazil']['Team'] = 'BRA'\n",
+    "dataframes_players['Bulgaria']['Team'] = 'BUL'\n",
+    "dataframes_players['Canada']['Team'] = 'CAN'\n",
+    "dataframes_players['China']['Team'] = 'CHN'\n",
+    "dataframes_players['Croatia']['Team'] = 'CRO'\n",
+    "dataframes_players['Dominican Republic']['Team'] = 'DOM'\n",
+    "dataframes_players['Germany']['Team'] = 'GER'\n",
+    "dataframes_players['Italy']['Team'] = 'ITA'\n",
+    "dataframes_players['Japan']['Team'] = 'JPN'\n",
+    "dataframes_players['Korea']['Team'] = 'KOR'\n",
+    "dataframes_players['Netherlands']['Team'] = 'NED'\n",
+    "dataframes_players['Poland']['Team'] = 'POL'\n",
+    "dataframes_players['Serbia']['Team'] = 'SRB'\n",
+    "dataframes_players['Thailand']['Team'] = 'THA'\n",
+    "dataframes_players['Türkiye']['Team'] = 'TUR'\n",
+    "dataframes_players['USA']['Team'] = 'USA'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f4f2c503",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>No.</th>\n",
+       "      <th>Player Name</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Duarte Alecrim Diana</td>\n",
+       "      <td>MB</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Alexandre Costa Nunes Nyeme Victoria</td>\n",
+       "      <td>L</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Zalewski Daroit Priscila</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Daher de Menezes Thaisa</td>\n",
+       "      <td>MB</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Montibeller Rosamaria</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Ogbogu Chiaka</td>\n",
+       "      <td>MB</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>26</td>\n",
+       "      <td>O'Neal Asjia</td>\n",
+       "      <td>MB</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Skinner Avery</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Lanier Khalia</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td></td>\n",
+       "      <td>Karch Kiraly</td>\n",
+       "      <td>COACH</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>239 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    No.                           Player Name Position Team\n",
+       "0     2                  Duarte Alecrim Diana       MB  BRA\n",
+       "1     3  Alexandre Costa Nunes Nyeme Victoria        L  BRA\n",
+       "2     5              Zalewski Daroit Priscila       OH  BRA\n",
+       "3     6               Daher de Menezes Thaisa       MB  BRA\n",
+       "4     7                 Montibeller Rosamaria       OH  BRA\n",
+       "..   ..                                   ...      ...  ...\n",
+       "234  24                         Ogbogu Chiaka       MB  USA\n",
+       "235  26                          O'Neal Asjia       MB  USA\n",
+       "236  27                         Skinner Avery       OH  USA\n",
+       "237  29                         Lanier Khalia       OH  USA\n",
+       "238                              Karch Kiraly    COACH  USA\n",
+       "\n",
+       "[239 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_players = pd.concat(objs = dataframes_players, axis = 0, ignore_index = True)\n",
+    "\n",
+    "all_players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dd3d4489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exporting dataframe to csv file\n",
+    "\n",
+    "all_players.to_csv('players.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a96ac8",
+   "metadata": {},
+   "source": [
+    "The dataframes have been exported successfully."
    ]
   }
  ],
